Simple replacement operation implemented